updated calories endpoints
