# app.js
@@ -5,6 +5,7 @@ const swaggerUi = require("swagger-ui-express");
 
 const swaggerDocument = require("./swagger.json");
 const productsRouter = require("./routes/api/products");
+const caloriesRouter = require("./routes/api/calories");
 const authRouter = require("./routes/api/auth");
 const usersRouter = require("./routes/api/users");
 
@@ -19,6 +20,7 @@ app.use(cors());
 app.use(express.json());
 
 app.use("/api/products", productsRouter);
+app.use("/api/calories", caloriesRouter);
 app.use("/api/auth", authRouter);
 app.use("/api/users", usersRouter);
 app.use("/api/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
